cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_179.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:78: error: NULL_DEREFERENCE
  pointer `pt` last assigned on line 77 could be null and is dereferenced at line 78, column 12.
Showing all 6 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:65:1: start of procedure X509_check_trust()
63.   }
64.   
65. > int X509_check_trust(X509 *x, int id, int flags)
66.   {
67.       X509_TRUST *pt;

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:71:9: Taking false branch
69.   
70.       /* We get this as a default value */
71.       if (id == X509_TRUST_DEFAULT)
              ^
72.           return obj_trust(NID_anyExtendedKeyUsage, x,
73.                            flags | X509_TRUST_DO_SS_COMPAT);

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:74:5: 
72.           return obj_trust(NID_anyExtendedKeyUsage, x,
73.                            flags | X509_TRUST_DO_SS_COMPAT);
74. >     idx = X509_TRUST_get_by_id(id);
75.       if (idx == -1)
76.           return default_trust(id, x, flags);

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:75:9: Taking false branch
73.                            flags | X509_TRUST_DO_SS_COMPAT);
74.       idx = X509_TRUST_get_by_id(id);
75.       if (idx == -1)
              ^
76.           return default_trust(id, x, flags);
77.       pt = X509_TRUST_get0(idx);

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:77:5: 
75.       if (idx == -1)
76.           return default_trust(id, x, flags);
77. >     pt = X509_TRUST_get0(idx);
78.       return pt->check_trust(pt, x, flags);
79.   }

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/x509/x509_trs.c:78:5: 
76.           return default_trust(id, x, flags);
77.       pt = X509_TRUST_get0(idx);
78. >     return pt->check_trust(pt, x, flags);
79.   }
80.   
